# ILLIXR-analysis

./: .gitignore  .gitmodules  .pylintrc  README.md  check.sh  main.sh  mypy.ini  pre-commit.sh  problems.md  profiling.txt  pyproject.toml  shell.nix
.cache/: illixr.analysis.read_trials.read_trial_cache.pickle
.github/workflows/: main.yaml
illixr/analysis/: .#call_forest.py  __init__.py  __main__.py  analyze_trials.py  analyze_trials2.py  analyze_trials3.py  call_forest.py  call_tree.py  chaff.py  check.py  main.py  read_trials.py  types.py  util.py
